Upgrade to SpringBoot 3.2.0 - Clean up dependencies - Create module for error-handling - Clean up gradle builds